# LLMEngine

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  API_INTEGRATION_SUMMARY.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  QUICKSTART.md  README.md  SUPPORT.md  VERSION  build.sh  changelog.md  contributing.md  quickstart.md  rules.md  support.md  tmp.cpp
.cursor/: last-change-notes.md
.github/: CODEOWNERS  CONTRIBUTING.md  SECURITY.md  dependabot.yml  pull_request_template.md
cmake/: Config.cmake.in  llmengine.pc.in
config/: README.md  api_config.json
docs/: ADR-001-architecture-boundaries.md  API_REFERENCE.md  ARCHITECTURE.md  BUILD.md  CI_CD_GUIDE.md  CONFIGURATION.md  CUSTOM_CONFIG_PATH.md  Doxyfile  ERROR_HANDLING.md  FAQ.md  PERFORMANCE.md  PROVIDERS.md  SECURITY.md  api_reference.md  architecture.md  build.md  ci_cd_guide.md  configuration.md  custom_config_path.md  faq.md  performance.md  providers.md  security.md
examples/: CMakeLists.txt  README.md  batch_processor.cpp  build_examples.sh  chatbot.cpp  code_analyzer.cpp  dual_bot_chat.cpp  file_analyzer.cpp  image_generator.cpp  logo_generator.cpp  multiBotAnalyzer.cpp  multiBotProblemSolver.cpp  readme_chatbot.cpp  text_processor.cpp  translator.cpp
examples/build_examples/: response_full.txt
examples/build_examples/config/: api_config.json
examples/consumer/: CMakeLists.txt  main.cpp
include/: APIClient.hpp  DebugArtifacts.hpp  LLMEngine.hpp  LLMOutputProcessor.hpp  Logger.hpp  RequestLogger.hpp  Utils.hpp
nextVersion/: cli-options-analyzer.sh  file-change-analyzer.sh  generate-ci-gpg-key.sh  git-operations.sh  keyword-analyzer.sh  mathematical-version-bump.sh  ref-resolver.sh  security-keyword-analyzer.sh  semantic-version-analyzer.sh  sync_alpha.sh  tag-manager.sh  version-calculator-loc.sh  version-calculator.sh  version-config-loader.sh  version-utils.sh  version-validator.sh
scripts/: run-asan.sh  run-tests.sh
src/: APIClient.cpp  APIClient.hpp  APIClientCommon.hpp  AnalysisInput.cpp  AnalysisResult.cpp  AnthropicClient.cpp  ArtifactSink.cpp  Backoff.hpp  ChatCompletionRequestHelper.hpp  DebugArtifactManager.cpp  DebugArtifacts.cpp  DebugArtifacts.hpp  EngineState.cpp  EngineState.hpp  GeminiClient.cpp  LLMEngine.cpp  LLMEngine.hpp  LLMEngineBuilder.cpp  LLMOutputProcessor.cpp  LLMOutputProcessor.hpp  Logger.hpp  OllamaClient.cpp  OpenAIClient.cpp  OpenAICompatibleClient.cpp  OpenAICompatibleClient.hpp  ParameterMerger.cpp  ProviderBootstrap.cpp  QwenClient.cpp  RequestContextBuilder.cpp  RequestExecutor.cpp  RequestLogger.cpp  ToolBuilder.cpp  (+7 more)
test/: CMakeLists.txt  README.md  TestUtils.hpp  benchmark_json_ops.cpp  benchmark_parameter_merger.cpp  benchmark_request_logger.cpp  benchmark_response_parser.cpp  build_test.sh  coverage.sh  fuzz_json_parsing.cpp  fuzz_parameter_merging.cpp  fuzz_redactor.cpp  fuzz_response_parsing.cpp  ollama_response.json  ollama_response_full.txt  run_api_tests.sh  test.cpp  test_analysis_result_extensions.cpp  test_api.cpp  test_api_client_factory.cpp  test_api_config_manager.cpp  test_api_config_manager_thread_safety.cpp  test_api_config_parsing.cpp  test_async_cancellation.cpp  test_async_lifetime.cpp  test_async_stream.cpp  test_async_streaming_iter2.cpp  test_backoff.cpp  test_batch_concurrency.cpp  test_builder_refinements.cpp  test_chat_completion_helper.cpp  test_command_executor.cpp  test_debug_artifacts.cpp  test_error_paths.cpp  test_features_iter2.cpp  test_features_iter3.cpp  test_integration.cpp  test_llmengine_builder.cpp  test_llmengine_construction.cpp  test_llmengine_thread_safety.cpp  (+22 more)
test/benchmarks/: benchmark_json_ops.cpp  benchmark_parameter_merger.cpp  benchmark_request_logger.cpp  benchmark_response_parser.cpp
test/core/: test.cpp  test_analysis_result_extensions.cpp  test_api_config_manager.cpp  test_api_config_manager_thread_safety.cpp  test_builder_refinements.cpp  test_llmengine_builder.cpp  test_llmengine_construction.cpp  test_llmengine_thread_safety.cpp  test_parameter_merger_extended.cpp  test_request_context_builder_thread_safety.cpp  test_tool_builder.cpp  test_tool_builder_extended.cpp  test_validation_and_interceptors.cpp
test/core/async/: test_async_cancellation.cpp  test_async_lifetime.cpp  test_async_stream.cpp  test_async_streaming_iter2.cpp  test_streaming_metrics_fix.cpp
test/core/builder/: test_builder_refinements.cpp  test_llmengine_builder.cpp  test_request_context_builder_thread_safety.cpp  test_tool_builder.cpp  test_tool_builder_extended.cpp
test/core/config/: test_api_config_manager.cpp  test_api_config_manager_thread_safety.cpp  test_api_config_parsing.cpp
test/core/general/: test.cpp  test_batch_concurrency.cpp  test_llmengine_construction.cpp  test_llmengine_thread_safety.cpp
test/core/parameters/: test_parameter_merger.cpp  test_parameter_merger_extended.cpp  test_parameter_propagation.cpp
test/core/result/: test_analysis_result_extensions.cpp  test_result_extensions.cpp
test/core/validation/: test_error_paths.cpp  test_validation_and_interceptors.cpp  test_validation_extended.cpp
test/diagnostics/: test_debug_artifacts.cpp  test_secret_redaction.cpp
test/fuzz/: fuzz_json_parsing.cpp  fuzz_parameter_merging.cpp  fuzz_redactor.cpp  fuzz_response_parsing.cpp
test/http/: test_api.cpp  test_chat_completion_helper.cpp  test_request_executor.cpp  test_request_logger.cpp  test_request_options_builder.cpp  test_response_handler.cpp  test_response_parser.cpp  test_retry_policy.cpp  test_timeout.cpp
test/integration/: test_features_iter2.cpp  test_features_iter3.cpp  test_integration.cpp  test_new_features_iter1.cpp
test/providers/: test_api_client_factory.cpp  test_provider_bootstrap_edge.cpp  test_provider_mapping_extended.cpp  test_provider_payloads.cpp  test_provider_type_mapping.cpp  test_streaming_providers.cpp
test/support/: FakeAPIClient.cpp  FakeAPIClient.hpp  TestUtils.hpp  fake_api_client.cpp  fake_api_client.hpp  test_utils.hpp
test/utils/: test_backoff.cpp  test_command_executor.cpp  test_tempdir_hardening.cpp  test_thread_pool.cpp
(+242 files in other folders)
